src/sass/_main.sass
*		
	&:focus
		box-shadow: 0px 0px 10px 10px rgba(75,179,197,0.5)

body
	line-height: 1.4
	color: #333333
	background-color: #ddd 
	overflow: hidden
	height: 100vh 

.header
	position: fixed
	left: 0
	top: 0
	right: 0
	padding: 20px    
	z-index: 1500 
	
.section
	height: 100vh
	width: 100%
	background: #000
	padding: 10vw
	position: absolute
	top: 100%
	left: 0  
	opacity: 0
	+tr(all 1s ease-in-out)
	&.is-active
		top: 0
		opacity: 0.5
	&.is-up
		top: -100%
	&.is-down
		top: 100%
	&_hero
		background-color: #ddffaa
	&_dev
		background-color: #0e0e0e
	&_projects
		background-color: #00ff00
	&_vacancies
		background-color: #ffaaaa
	&_join-us
		background-color: #00cc00 


.pagination
	position: fixed
	top: 50%
	right: 50px
	z-index: 1500
	&__item
		margin-bottom: 10px
		width: 25px 
		height: 25px 
		display: block
		background: #fff
		border-radius: 50%
		border: 1px solid #cccccc
		&.is-active 
			background: #333
		// &:focus
		// 	box-shadow: 0px 0px  0px 10px rgba(75,179,197,0.5)



	

